--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
 .App {
-  text-align: center;
+  width: 600px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-input {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  gap: 5px;
+}
+
+.form-input input {
+  background-color: rgb(209, 209, 209);
+}
+
+.form-input input, button {
+  padding: 10px;
+  border: none;
+}
+
+.form-input button {
+  background-color: rgb(47, 127, 255);
   color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.form-input button:hover {
+  background-color: rgb(66, 138, 253);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.items {
+  padding: 10px;
+  background-color: rgb(233, 232, 232);
+  margin-top: 20px;
+  border-radius: 5px;
+  position: relative;
 }
+
+.item {
+  list-style: none;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(230, 230, 230);
+  border-radius: 5px;
+  padding: 10px;
+  color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item:hover {
+  background-color: rgb(211, 211, 211);
+  cursor: pointer;
+}
+
+.function-wrapper {
+  display: flex;
+  gap: 10px;
+}
+
+.function-wrapper span:nth-child(1) {
+  background-color: rgb(0, 172, 23);
+  color: white;
+  padding: 5px;
+}
+
+.function-wrapper span:nth-child(2) {
+  background-color: rgb(227, 0, 0);
+  color: white;
+  padding: 5px;
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+}
+
+.loader {
+  border: 8px solid rgb(211, 211, 211);
+  border-top: 8px solid rgb(0, 110, 254);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
+
+
